public/stylesheets/main.css
/* -- Error Messages --- */

body {
    .error_message {
        background white;
        text-align: center;
        margin: 4px;
        color: #ff0000;
    }
}


/* -- Passport Page --- */

:root {
    --jumbotron-padding-y: 1rem;
}

.jumbotron {
    padding-top: var(--jumbotron-padding-y);
    padding-bottom: var(--jumbotron-padding-y);
    margin-bottom: 0;
    background-color: #fff;
}

@media (min-width: 768px) {
    .jumbotron {
        padding-top: calc(var(--jumbotron-padding-y) * 2);
        padding-bottom: calc(var(--jumbotron-padding-y) * 2);
    }
}

.jumbotron p:last-child {
    margin-bottom: 0;
}

.jumbotron-heading {
    font-weight: 600;
}

.jumbotron .container {
    max-width: 40rem;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}


/* -- Footer --- */

footer.branding {
    bottom: 0;
    left: 0;
    color: #000000;
    padding-left: 10px;
}

.fixed-bottom,
.push {
    height: 60px;
    ;
}

.icon {
    padding: 0 5px;
}

footer a#email {
    color: #000000;
    text-decoration: underline
}

footer small {
    font-size: 1.1em;
}

